# VS1984

./: CMakeLists.txt  README.md  README.zh-CN.md
res/: config.xbc  vs1984-btd
